fixed img spacing

--- a/style.css
+++ b/style.css
@@ -4,13 +4,18 @@ img {
     -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
     -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
     box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    padding-right: 10px;
+    position: relative;
+    right: 5px;
 }
 
 @media only screen and (min-width: 1000px) {
     div.container-fluid {
         padding-left: 15%;
         padding-right: 15%;
+    }
+
+    img {
+        right: 10px;
     }
 }
 
